WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232893
Fix !ENABLE(ACCESSIBILITY) after
r285427
https://bugs.webkit.org/show_bug.cgi?id=232893
Summary
Fix !ENABLE(ACCESSIBILITY) after r285427
Don Olmstead
Reported
2021-11-09 10:52:34 PST
The build fix rectified the compile error but introduced a link error.
Attachments
Patch
(2.02 KB, patch)
2021-11-09 11:03 PST
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-11-09 10:52:50 PST
<
rdar://problem/85210424
>
Don Olmstead
Comment 2
2021-11-09 11:03:38 PST
Created
attachment 443706
[details]
Patch
EWS
Comment 3
2021-11-09 12:45:06 PST
Committed
r285524
(
244041@main
): <
https://commits.webkit.org/244041@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 443706
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug